Fix: 3개월 내 후기 재 제출 불가 로직 구현

--- a/client/src/modals/ReviewSubmitModal/alertStyle.css
+++ b/client/src/modals/ReviewSubmitModal/alertStyle.css
@@ -1,5 +1,13 @@
 .react-confirm-alert-body {
-  text-align: center;
+  text-align: center; 
+  font-size: 12px;
+  font-weight: bold;
+  color: #FA8072;
+}
+
+.react-confirm-alert-body > h1 {
+  font-size: 20px;
+  color: #666362;
 }
 
 .react-confirm-alert-button-group {
